# blink-markets

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  smoke.sh  tailwind.config.ts  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml
blink_markets/: Cargo.toml
blink_markets/src/: contract.rs  lib.rs  service.rs  service_broken.rs  state.rs
blink_markets/tests/: integration_tests.rs  single_chain.rs
docs/: CONWAY_COMPLETE.md  CONWAY_DEPLOYMENT.md  CONWAY_STATUS.md  CREATE_MARKET_GUIDE.md  FRONTEND_SETUP.md  MUTATION_FIX.md  README-wave1.md  linera-docs.md  projects-wave2.md
docs/runbooks/: local.md  testnet.md
scripts/: build-wasm.sh  conway-diagnostic-deploy.sh  conway-extended-retry.sh  conway-final-deploy.sh  conway-hard-deploy.sh  conway-optimized-deploy.sh  conway-retry-deploy.sh  create-market-cli.sh  demo-features.sh  deploy-conway.sh  deploy-local.sh  docker-up.sh  execute-markets-real.sh  linera-dev  linera-tn  local-publish.sh  local-up.sh  monitor-deployment.sh  seed-demo.sh  seed-markets.sh  test-full-stack.sh  testnet-init.sh  testnet-publish.sh  verify-conway-setup.sh  verify-deployment.sh
src/: App.tsx  index.css  vite-env.d.ts
src/components/: ChainStatus.tsx  DemoAction.tsx  Logo.tsx  PerformanceHUD.tsx
src/lib/: graphqlClient.ts  lineraClient.ts
src/pages/: Analytics.tsx  (+7 more)
wave1/: README.md  gql_schema.json  gql_typename.json  gql_version.json  info.txt  site_http.txt
wave2/: DEPLOYMENT_EVIDENCE.md  README.md  SUBMISSION_STRATEGY.md
(+3 files in other folders)
