[package]
name = "blink_markets"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
async-stream = "0.3"
async-trait = "0.1"
bcs = "0.1"
futures = { version = "0.3" }
linera-sdk = "=0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "2.0"
tokio = { version = "1.40", features = ["rt", "time"] }

[dev-dependencies]
linera-sdk = { version = "=0.15.6", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "blink_markets_contract"
path = "src/contract.rs"

[[bin]]
name = "blink_markets_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
